<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/inicio"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/editarperfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_inmueble"
            android:icon="@drawable/inmueble"
            android:title="@string/menu_inmueble" />
    </group>

    <item android:title="Opciones">
        <menu>
            <item
                android:id="@+id/nav_salir"
                android:icon="@drawable/salir"
                android:title="Salir" />
        </menu>
    </item>
</menu>
