<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondodepantalla"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etInmuebleDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputDireccion"
            android:inputType="text"
            android:enabled="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etInmuebleAmbientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputAmbientes"
            android:inputType="number"
            android:enabled="false"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etInmuebleSuperficie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputSuperficie"
            android:inputType="number"
            android:enabled="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etInmuebleLatitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputLatitud"
            android:inputType="number"
            android:enabled="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etInmuebleLongitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputLongitud"
            android:inputType="number"
            android:enabled="false"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <CheckBox
        android:id="@+id/cbInmueblePublicado"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkPublicar"
        android:textStyle="bold"
        android:enabled="false"
        />

    <CheckBox
        android:id="@+id/cbInmuebleHabilitado"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkHabilitar"
        android:textStyle="bold"
        android:enabled="false"
        />

        <Button
            android:id="@+id/btnEditarInmueble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Editar"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/tvMansajeInmuebleModificado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="15sp"
        android:visibility="gone"
        android:textStyle="bold"
        />



    <Button
        android:id="@+id/btnEliminarInmueble"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Eliminar"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />

    <Button
        android:id="@+id/btnModificarInmueble"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Aplicar Cambios"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:enabled="false"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />


</LinearLayout>